k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gibson-webgl-service
spec:
  selector:
    app: gibson-webgl
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
