k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
    field.cattle.io/description: Ingress Gibson webgl demo
  name: gibson-webgl-ingress
  namespace: gibson-webgl
spec:
  rules:
  - host: gibson.paulynomial.com
    http:
      paths:
      - backend:
          serviceName: gibson-webgl-service
          servicePort: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - gibson.paulynomial.com
    secretName: gibson-ingress-prod-tls
